<resources>
    <string name="app_name">CSI</string>
    <string name="tEdukacija">Surfuj bezbedno</string>
    <string name="tIgrica">Igraj bezbedno</string>
    <string name="tPrijava">Prijavi nebezbedno </string>
    <string name="tBack">Povratak na pocetak</string>
    <string name="tNext">Sledeca strana</string>
    <string name="tMisija">Misija</string>
    <string name="tVesti">Vesti</string>
    <string name="tKontakt">Kontaktiraj nas</string>
    <string name="tContactDesc">kontakt@csi.org.rs</string>
    <string name="tAbout">O programu</string>
    <string name="tExit">Izlaz</string>
    <string name="tDrawerTitle">Naslov 1</string>
    <string name="tDrawerSubTitle">Sub naslov</string>
    <string name="education_title1">Šta je CSAM?</string>
    <string name="education_title2">Šta je doxing?</string>
    <string name="education_title3">Šta je grooming?</string>
    <string name="education_title4">Šta je sexting?</string>
    <string name="education_title5">Šta je revenge porn?</string>
    <string name="education_title6">Šta je sextortion?</string>
    <string name="education_title7">Šta je phishing?</string>
    <string name="education_title8">Šta je oversharing?</string>
    <string name="education_title9">Šta je cyber stalking?</string>
    <string name="education_title10">Šta je child trafficking?</string>
    <string name="education_title11">Šta je cyberbullying?</string>
    <string name="education_title12">Šta je internet zavisnost?</string>
    <string name="education_info1">
        <![CDATA[<p><p><span>CSAM je skraćenica za Child Sexual Abuse Material, odnosno materijal koji prikazuje seksualno zlostavljanje dece. Internet je, nažalost, prepun ovakvog materijala koji su predatori na razne načine iznudili od dece.</span></p>
<p><span>Dužnost svih nas je da kada naiđemo na materijal koji prikazuje seksualno zlostvljanje dece da ga obavezno prijavimo, kako bi &scaron;to pre bio sklonjen sa interneta, sve u cilju za&scaron;tite žrtve koja je na njemu prikazana.</span></p>
<ul>
<li aria-level="1"><span>93% žrtava su devojčice, a 7% dečaci.</span></li>
<li aria-level="1"><span>76% žrtava imaju između 3 i 13 godina</span></li>
<li aria-level="1"><span>Ovakav sadržaj se &scaron;iri i distribuira putem raznih sajtova, dru&scaron;tvenih mreža i foruma</span></li>
<li aria-level="1"><span>Svako može da bude žrtva</span></li>
</ul>
<p><b>Kako se za&scaron;tititi?</b></p>
<ul>
<li aria-level="1"><span>Nemoj da pristane&scaron; na snimanje, fotografisanje i slanje seksualnog sadržaja.&nbsp;</span></li>
<li aria-level="1"><span>Ne razgovaraj o seksu ni sa kime na internetu.</span></li>
<li aria-level="1"><span>Ne odgovaraj na nepristojne poruke, već ih odmah pokaži roditeljima ili odraslom kom veruje&scaron;.</span></li>
<li aria-level="1"><span>Ukoliko zna&scaron; da je neko u tvojoj okolini žrtva, nemoj da ćuti&scaron;, prijavi. Može&scaron; spasiti život.</span></li>
</ul></p>]]>
    </string>
    <string name="education_info2">
        <![CDATA[<p><p><span>Doxing, ili doksing je pona&scaron;anje u okviru kojeg jedna osoba (dokser) prikuplja podatke o drugoj osobi, i objavljuje ih s namerom da osobu prikaže u negativnom svetlu ili je ponizi.</span></p>
<p><span>Proces doksinga je dug, ali kada klupko počne da se odmotava, novim podacima nema kraja. Upadom na imejl, dokser dobija pristup svim nalozima koji su registrovani na tu adresu. Od Fejsbuka do banke. Sledeći korak su adresa prebivali&scaron;ta i broj telefona, a ako ste ikada ne&scaron;to kupili onlajn, sve te podatke imate na va&scaron;oj elektonskoj po&scaron;ti ili u sandučićima na dru&scaron;tvenim mrežama. Nakon ovoga kreće napad na Google disk, Apple30d ili Samsung klaud, gde telefon čuva sve va&scaron;e fotografije koje ste ikada napravili, a često i one obrisane. Zvuči neverovatno, poput scene iz filma ali ovo se, nažalost, de&scaron;ava svakodnevno.</span></p>
<p><b>Kako se za&scaron;tititi?</b></p>
<ul>
<li aria-level="1"><span>&Scaron;ifre na nalozima moraju da imaju namanje osam karaktera, velika i mala slova, brojeve i specijalne karaktere popout zvezdice, tarabice ili uzvičnika.</span></li>
<li aria-level="1"><span>Za&scaron;tita podataka je broj jedan uslov za kori&scaron;ćenje interneta, ukoliko ti neko traži lične informacije - broj telefona, &scaron;kolu koju pohađa&scaron; ili broj telefona, to obavezno prijavi.</span></li>
</ul>
<ul>
<li aria-level="1"><span>Ukoliko aplikacija ne insistira na punom imenu i prezimenu, a u većini slučajeva ne insistira, koristi nadimak ili pseudonim.</span></li>
<li aria-level="1"><span>Prilikom kreiranja pseudonima za internet izbegavaj bilo koji broj koji bi mogao da ukaže na tvoje godine. Ukoliko predator vidi ime ,,Niki2010&rsquo;&rsquo; znaće da je u pitanju dete, i da je velika verovatnoća da će ono pristati na sve.</span></li>
<li aria-level="1"><span>Deljenje &scaron;ifre za naloge među drugarima treba da bude zabranjeno, svaku lozinku treba da zna samo vlasnik profila i eventualno roditelj ili staratelj.</span></li>
</ul></p>]]>
    </string>
    <string name="education_info3"><![CDATA[<p><p><span>Grooming, odnosno gruming, najče&scaron;će se vezuje za negu kućnih ljubimaca i to je primarno značenje pojma. Međutim, kada je o deci reč, gruming opisuje uspostavljanje odnosa poverenja i emocionalne povezanosti između deteta i odrasle osobe, s ciljem vrbovanja i iskori&scaron;tavanja u seksualne svrhe.</span></p>
<p><span>Grumeri su vrsni manipulatori koji se služe isprobanim tehnikama za upoznavanje dece. Oni postaju njihovi poznanici sa interneta, zatim &rsquo;&rsquo;najbolji prijatelji&rsquo;&rsquo; u koje imaju poverenja, a vrlo često i &rsquo;&rsquo;onlajn momak/devojka&rsquo;&rsquo;, i to sve zbog jednog cilja &ndash; iznuda nagih fotogarafija ili videa.</span></p>
<p><span>Pre uspostavljanja kontakta sa detetom, ovi predatori nadgledaju grupu dece, njihovu komunikaciju, krug prijatelja, lokaciju i položaj u dru&scaron;tvu. Zatim, kada prikupe dovoljno informacija, spremni su da iz grupe izdvoje dete za koje su ocenili da će najlak&scaron;e da nasedne na njihovu priču. Ceo ovaj proces se odvija sporo i gotovo &rsquo;&rsquo;prirodno&rsquo;&rsquo; tako da u velikom broju slučajeva grumera ne uspevaju da otkriju ni roditelji, a kamoli deca.</span></p>
<p><b>Kako se za&scaron;tititi?</b></p>
<p><span>Zaključaj profil, prihvataj za prijatelje samo osobe koje zna&scaron;, ukoliko ti osoba koju ne poznaje&scaron; &scaron;alje poruke i uporno želi da komunicira sa tobom &ndash; prijavi roditeljima. Nikome ne &scaron;alji svoje fotografije i videe, jer je velika verovatnoća da budu zloupotrebljeni. Jednom na internetu, zauvek na internetu.</span></p></p>]]>
    </string>
    <string name="education_info4">
        <![CDATA[<p><p><span>Seksting podrazumeva razmenu eksplicitnog sadržaja &ndash; fotografija, videa i teksta, putem mobilnog telefona, kompjutera ili tableta. Ova vrsta komunikacije nije problematična ako u njoj učestvuju dve odrasle osobe koje znaju u &scaron;ta se upu&scaron;taju, ali je opasna i kažnjiva ukoliko je upražnjavaju deca i tinejdžeri sa odraslima.</span></p>
<p><span>Seksting može biti zamka koja će žrtvu uvući u finansijske probleme. Na internetu vrebaju manipulatori koji se služe isprobanim tehnikama za pridobijanje žrtvi. Sve počinje bezazlenim razgovorom, a kada osete da je vreme, predatori traže fotografije i videe dece i mladih u raznim pozama. Vođeni strahom od odbijanja, strahom da nisu dovoljno slobodni, kul i moderni &ndash; oni pristaju na sve.</span></p>
<p><span>Nakon &scaron;to fotografija dospe u kompjuter predatora, žrtva je u zamci. ,,Ukoliko ne uplati&scaron; 5000 dinara do sutra, poslaću ovu fotografiju tvojoj mami!&rsquo;&rsquo; &ndash; kreću pretnje. Psihičkim zlostavljanjem žrtva postaje prisiljena da krade novac ili da se fotografi&scaron;e u ponižavajućim pozama, a to dovodi do otuđenja od dru&scaron;tva, roditelja i &scaron;kole. Sram i strah postaju sve veći, pa se ovakvi slučajevi neretko zavr&scaron;e i samoubistvom.</span></p>
<p><b>Kako se za&scaron;tititi?</b></p>
<p><span>Pridržavajte se pravila ,,&Scaron;BRB&rsquo;&rsquo; odnosno ,,&Scaron;ta bi baka rekla&rsquo;&rsquo;. Ono podrazumeva da na interentu ne deli&scaron; ni&scaron;ta &scaron;to ne bi želeo da tvoja baka vidi ili čuje. </span></p></p>]]>
    </string>
    <string name="education_info5">
        <![CDATA[<p><p><span>Osvetnička pornografija je grana nesaglasne pornografije. Ona predstavlja deljenje eksplicitnog sadržaja kako bi se osoba prikazana na tom sadržaju ponizila, upla&scaron;ila i kako bi izgubila kredibilitet. Uz materijal često budu objavljenje i druge privatne informacije o osobi kao &scaron;to su ime i prezime, mesto stanovanja, radno mesto ili broj telefona.</span></p>
<p><span>Motivi osobe koja materijal iznosi u javnost zavise od nekoliko faktora. Nekada se radi o biv&scaron;em partneru koji je razočaran zbog zavr&scaron;etka veze, pa objavljivanjem fotografija i videa želi da ponizi drugu stranu. Privatni sadržaj može se pojaviti u javnosti i kao rezultat hakovanja mobilnog telefona ili kompjutera. Kada su deca i tinejdžeri u pitanju, de&scaron;ava se da svađe i nesuglasice u dru&scaron;tvu dovode do deljenja ovakvog materijala.</span></p>
<p><span>Bitno je naglasiti da eksplicitan sadržaj može biti napravljen svojevoljno, između dve osobe u poverenju, ili protiv svoje volje, kada je snimanje i fotografisanje tajno, ili jo&scaron; gore prisiljeno. Ni u jednom slučaju nije u redu deliti takav sadržaj bez pristanka i znanja osoba koje su učestvovale u njegovom pravljenju.</span></p>
<p><b>Kako se za&scaron;tititi?</b></p>
<p><span>Nemoj slati nage fotografije i videe. Ukoliko neko u dru&scaron;tvu poseduje takve fotografije, odbijaj da ih deli&scaron;. Prijavi nastavniku, treneru ili roditelju da u dru&scaron;tvu kruži takav sadržaj, kako bi sačuvao druga ili drugaricu koji je na njemu prikazan</span></p></p>]]>
    </string>
    <string name="education_info6">
        <![CDATA[<p><p><span>Sextortion, odnosno iznuda seksualnog sadržaja je vrsta ucene koju predatori koriste za prikupljanje seksualnog sadržaja od deteta, sa ciljem da stupe u seksualni odnos sa njim ili iznude novac.</span></p>
<p><span>Kako može da izgleda iznuda?</span></p>
<p><span>Nepoznata osoba vas poziva putem Instagrama ili vam &scaron;alje sliku kako zlostavlja psa. Ubrzo posle slike, govori vam da se javite na poziv ili će ubiti životinju. Deca, instinktivno, bez izuzetka pristaju u želji da spase psa. Kada se uključe u poziv, predator uključuje snimanje i kreće sa zahtevima &ndash; ,,skini se ili ću ubiti ovu slatku kucu&hellip;&rsquo;&rsquo; u strahu da će prisustvovati mučenju životinje, deca pristaju na sve.</span></p>
<p><span>Uobičajeno je da predatori stupe u prvi kontakt sa detetom na jednoj platformi/dru&scaron;tvenoj mreži, a zatim ga zamole da pređu na drugu ili treću platformu, obično onu sa &scaron;ifrovanim sistemima za razmenu poruka kako bi se otežalo praćenje njihovog zločina.</span></p>
<p><b>Kako se za&scaron;tititi?</b></p>
<p><span>Seksualna iznuda može da se dogodi svakome, često možemo biti žrtve osoba koje nas dobro poznaju. Najbolji savet koji može&scaron; da dobije&scaron; je da nikada ne ulazi&scaron; u komunikaciju ili razmenu fotografija i videa koji bi mogli da ti na&scaron;kode, ako dospeju u pogre&scaron;ne ruke.</span></p>
<p><span>Ukoliko ti neko traži novac, i ima tvoje videe i fotografije, nemoj da se pla&scaron;i&scaron; i krivi&scaron; sebe, prijavi tu osobu roditelju, ili bilo kojoj odrasloj osobi u koju ima&scaron; povrenja.</span></p></p>]]>
    </string>
</resources>